--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lint": "next lint",
     "start": "next start",
     "build": "next build",
-    "export": "next export",
-    "deploy": "pnpm build && pnpm export && touch out/.nojekyll && git add out && git commit -m 'deploy' && git subtree push --prefix out origin gh-pages"
+    "deploy": "pnpm build && touch out/.nojekyll && git add out -f && git commit -m 'deploy' && git subtree push --prefix out origin gh-pages"
+
+  
 },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
